# shadercrab

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  requirements.md
.serena/: project.yml
examples/: microphone.glsl  shader.glsl  shader.wgsl  sound_example.glsl
src/: audio.rs  error.rs  glsl_transpiler.rs  lib.rs  main.rs  shader_detector.rs  sound_shader.rs  texture.rs  uniforms.rs
src/glsl_interpreter/: builtins.rs  interpreter.rs  mod.rs  value.rs
tests/: audio_test.rs
